--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -11,7 +11,7 @@
 	<script src="/__/firebase/init.js"></script>
 	<!-- FIREBASE -->
 
-    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="scripts/jquery.min.js"></script>
 	<script src="scripts/user_profile.js"></script>
 	<link href="css/bootstrap-4.0.0.css" rel="stylesheet">
 	<link rel="stylesheet" href="styles/main.css">
