--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -39,10 +39,26 @@
 </div>
 <div class="mainView">
   <section class="bioView">
-    <h1 id="profileNameLabel" class="subHeader">Rating: </h1>
+    <h1 id="profileNameLabel" class="subHeader">Profile</h1>
     <h5 id="bioLabel" class="smallText"></h5>
     <br>
-    <h3 id="averageRating" class="table_title primaryColour"></h3>
+
+    <h3 class="table_title primaryColour">Average Rating</h3>
+    <span id="averageRating" class="smallText lightTextColour">No ratings yet</span><br>
+    <div class="star-average">
+      <input id="5" type="radio" name="averageRating" onclick="return false;">
+      <label for="5"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+      <input id="4" type="radio" name="averageRating" onclick="return false;">
+      <label for="4"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+      <input id="3" type="radio" name="averageRating" onclick="return false;">
+      <label for="3"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+      <input id="2" type="radio" name="averageRating" onclick="return false;">
+      <label for="2"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+      <input id="1" type="radio" name="averageRating" onclick="return false;">
+      <label for="1"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
+    </div>
+
+    <h3 class="table_title primaryColour">Your Rating</h3>
     <div class="star-rating">
       <input id="star-5" type="radio" name="rating" value=5>
       <label for="star-5" title="5 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
