--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -26,7 +26,7 @@
     
 <header>
 <nav class="navigationBar">
-<img href="matching.html" alt="logo" class="logoPos" src="images/logo1.png">
+<img alt="logo" class="logoPos" src="images/logo1.png">
 <div class="menuItems"> 
     <a href="/matching.html">Matches</a> 
     <a href="/favourites.html">Favourites</a> 
