--- a/UniMeet/public/admin.html
+++ b/UniMeet/public/admin.html
@@ -10,56 +10,95 @@
     <link rel="stylesheet" href="styles/list.css">
 
     <!-- FIREBASE -->
-	<script src="/__/firebase/5.4.0/firebase-app.js"></script>
-	<script src="/__/firebase/5.4.0/firebase-auth.js"></script>
-	<script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
-	<script src="/__/firebase/5.4.0/firebase-functions.js"></script>
-	<script src="/__/firebase/init.js"></script>
-	<!-- FIREBASE -->
+    <script src="/__/firebase/5.4.0/firebase-app.js"></script>
+    <script src="/__/firebase/5.4.0/firebase-auth.js"></script>
+    <script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/5.4.0/firebase-functions.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <!-- FIREBASE -->
 </head>
 
 <body>
-    <section class="_app-container" style="margin:0px;padding:10px;">
-        <section class="_page-container">
-            <header class="_main-header text-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h1>Interests</h1>
-                            <div class="text-center clearfix _todo-main-controls">
-                                <div class="btn-group _todo-history-controls" role="group"><button class="btn btn-light" id="refreshButton" type="button" data-main-controls="undo"> <i class="fa fa-undo"></i></button></div>
-                            </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <section class="_app-container" style="margin:0px; padding-top:10px;">
+                    <div class="card">
+                        <div class="card-header">
+                            <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                                <li class="nav-item"><a class="nav-link active" href="#item-1-1" id="item-1-1-tab" data-toggle="tab" role="tab" aria-controls="item-1-1" aria-selected="true">Admin</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#item-1-2" id="item-1-2-tab" data-toggle="tab" role="tab" aria-controls="item-1-2" aria-selected="false">University</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#item-1-3" id="item-1-3-tab" data-toggle="tab" role="tab" aria-controls="item-1-3" aria-selected="false">Degree</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#item-1-4" id="item-1-4-tab" data-toggle="tab" role="tab" aria-controls="item-1-4" aria-selected="false">Course</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#item-1-5" id="item-1-5-tab" data-toggle="tab" role="tab" aria-controls="item-1-5" aria-selected="false">Interests</a></li>
+                            </ul>
                         </div>
-                    </div>
-                </div>
-            </header>
-            <section class="_main-content">
-                <section id="bs_todolist" class="_todo-list-container">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <section class="_add-task-form">
-                                    <div class="form-group"><input class="form-control" type="text" placeholder="Add an interest" id="newInterest"></div>
-                                    <div class="form-group"><button class="btn btn-success" type="button" id="newInterestButton">Submit </button></div>
-                                </section>
-                                <section id="todolist-cont" class="_todo-list" style="display: none">
-                                    <ul class="list-group _to-do-list-group sortable" id="task-list">
-                                        <li class="list-group-item _task"><span class="_todo-text">Interest</span>
+                        <div class="card-body">
+                            <div id="nav-tabContent" class="tab-content">
+                                <div id="item-1-1" class="tab-pane fade show active" role="tabpanel" aria-labelledby="item-1-1-tab">
+                                    <h4>Admin</h4>
+                                    <section class="_add-task-form">
+                                        <div style="padding-bottom: 10px"><button class="btn btn-light" id="adminRefreshButton" type="button"> <i class="fa fa-undo"></i></button></div>
+                                        <div class="form-group"><input class="form-control" type="text" placeholder="Add an admin" id="newAdmin"></div>
+                                        <div class="form-group"><button class="btn btn-success" type="button" id="newAdminButton">Submit </button></div>
+                                    </section>
+                                    <section id="adminList-cont" class="_todo-list" style="display: none">
+                                        <ul class="list-group _to-do-list-group sortable" id="admin-list">
+                                            <li class="list-group-item _task"><span class="_todo-text">Admin</span>
+                                                <div class="btn-group pull-right _task-controls" role="group"><button class="btn btn-light _todo-remove" type="button"> <i class="fa fa-trash"></i></button></div>
+                                                <div class="clearfix"></div>
+                                            </li>
+                                        </ul>
+                                    </section>
+                                </div>
+                                <div id="item-1-2" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-2-tab">
+                                    <h4>University</h4>
+                                    <section class="_add-task-form">
+                                       <div style="padding-bottom: 10px"><button class="btn btn-light" id="universityRefreshButton" type="button"> <i class="fa fa-undo"></i></button></div>
+                                       <div class="form-group"><input class="form-control" type="text" placeholder="Add a university" id="newUniversity"></div>
+                                       <div class="form-group"><button class="btn btn-success" type="button" id="newUniversityButton">Submit </button></div>
+                                   </section>
+                                   <section id="universityList-cont" class="_todo-list" style="display: none">
+                                    <ul class="list-group _to-do-list-group sortable" id="university-list">
+                                        <li class="list-group-item _task"><span class="_todo-text">University</span>
                                             <div class="btn-group pull-right _task-controls" role="group"><button class="btn btn-light _todo-remove" type="button"> <i class="fa fa-trash"></i></button></div>
                                             <div class="clearfix"></div>
                                         </li>
                                     </ul>
                                 </section>
                             </div>
+                            <div id="item-1-3" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-3-tab">
+                                <h4>Degree</h4>
+                            </div>
+                            <div id="item-1-4" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-4-tab">
+                                <h4>Course</h4>
+                            </div>
+                            <div id="item-1-5" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-5-tab">
+                                <h4>Interests</h4>
+                                <section class="_add-task-form">
+                                   <div style="padding-bottom: 10px"><button class="btn btn-light" id="interestRefreshButton" type="button"> <i class="fa fa-undo"></i></button></div>
+                                   <div class="form-group"><input class="form-control" type="text" placeholder="Add an interest" id="newInterest"></div>
+                                   <div class="form-group"><button class="btn btn-success" type="button" id="newInterestButton">Submit </button></div>
+                               </section>
+                               <section id="interestList-cont" class="_todo-list" style="display: none">
+                                <ul class="list-group _to-do-list-group sortable" id="interest-list">
+                                    <li class="list-group-item _task"><span class="_todo-text">Interest</span>
+                                        <div class="btn-group pull-right _task-controls" role="group"><button class="btn btn-light _todo-remove" type="button"> <i class="fa fa-trash"></i></button></div>
+                                        <div class="clearfix"></div>
+                                    </li>
+                                </ul>
+                            </section>
                         </div>
                     </div>
-                </section>
-            </section>
+                </div>
+            </div>
         </section>
-    </section>
-    <script src="scripts/jquery.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="scripts/admin.js"></script>
+    </div>
+</div>
+</div>
+<script src="scripts/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="scripts/admin.js"></script>
 </body>
 
 </html>
