--- a/UniMeet/public/admin.html
+++ b/UniMeet/public/admin.html
@@ -37,11 +37,12 @@
                     <div class="card">
                         <div class="card-header">
                             <ul class="nav nav-tabs card-header-tabs" role="tablist">
-                                <li class="nav-item"><a class="nav-link active" href="#item-1-1" id="item-1-1-tab" data-toggle="tab" role="tab" aria-controls="item-1-1" aria-selected="true">Admin</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#item-1-2" id="item-1-2-tab" data-toggle="tab" role="tab" aria-controls="item-1-2" aria-selected="false">University</a></li>
+                                <li class="nav-item"><a class="nav-link active" href="#item-1-1" id="item-1-1-tab" data-toggle="tab" role="tab" aria-controls="item-1-1" aria-selected="true" onclick="loadAdmins()">Admin</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#item-1-2" id="item-1-2-tab" data-toggle="tab" role="tab" aria-controls="item-1-2" aria-selected="false" onclick="loadUniversities()">University</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#item-1-3" id="item-1-3-tab" data-toggle="tab" role="tab" aria-controls="item-1-3" aria-selected="false">Degree</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#item-1-4" id="item-1-4-tab" data-toggle="tab" role="tab" aria-controls="item-1-4" aria-selected="false">Course</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#item-1-5" id="item-1-5-tab" data-toggle="tab" role="tab" aria-controls="item-1-5" aria-selected="false">Interests</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#item-1-5" id="item-1-5-tab" data-toggle="tab" role="tab" aria-controls="item-1-5" aria-selected="false" onclick="loadInterests()">Interests</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#item-1-6" id="item-1-6-tab" data-toggle="tab" role="tab" aria-controls="item-1-6" aria-selected="false" onclick="loadUsers()">Users</a></li>
                             </ul>
                         </div>
                         <div class="card-body">
@@ -94,16 +95,30 @@
                                  <div style="padding-bottom: 10px"><button class="btn btn-light" id="interestRefreshButton" type="button"> <i class="fa fa-undo"></i></button></div>
                                  <div class="form-group"><input class="form-control" type="text" placeholder="Add an interest" id="newInterest"></div>
                                  <div class="form-group"><button class="btn btn-success" type="button" id="newInterestButton">Submit </button></div>
-                             </section>
-                             <section id="interestList-cont" class="_todo-list" style="display: none">
-                                <ul class="list-group _to-do-list-group sortable" id="interest-list">
-                                    <li class="list-group-item _task"><span class="_todo-text">Interest</span>
+                                </section>
+                                <section id="interestList-cont" class="_todo-list" style="display: none">
+                                    <ul class="list-group _to-do-list-group sortable" id="interest-list">
+                                        <li class="list-group-item _task"><span class="_todo-text">Interest</span>
                                         <div class="btn-group pull-right _task-controls" role="group"><button class="btn btn-light _todo-remove" type="button"> <i class="fa fa-trash"></i></button></div>
                                         <div class="clearfix"></div>
-                                    </li>
-                                </ul>
-                            </section>
-                        </div>
+                                        </li>
+                                    </ul>
+                                </section>
+                            </div>
+                            <div id="item-1-6" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-6-tab">
+                                <h4>Users</h4>
+                                <section class="_add-task-form">
+                                 <div style="padding-bottom: 10px"><button class="btn btn-light" id="userRefreshButton" type="button"> <i class="fa fa-undo"></i></button></div>
+                                </section>
+                                <section id="userList-cont" class="_todo-list" style="display: none">
+                                    <ul class="list-group _to-do-list-group sortable" id="user-list">
+                                        <li class="list-group-item _task"><span class="_todo-text">User</span>
+                                        <div class="btn-group pull-right _task-controls" role="group"><button class="btn btn-light _todo-remove" type="button"> <i class="fa fa-trash"></i></button></div>
+                                        <div class="clearfix"></div>
+                                        </li>
+                                    </ul>
+                                </section>
+                            </div>
                     </div>
                 </div>
             </div>
